src/styles/content.css
@layer base {
  section,
  article {
    @apply my-6 balance-spacing;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-medium text-fg-1 my-4 balance-spacing text-balance;
    @apply data-subheading:font-normal data-subheading:text-fg-3 data-subheading:text-xs data-subheading:uppercase data-subheading:tracking-widest;
    &:has(+ figure) {
      @apply mb-2;
    }
  }

  p {
    @apply text-fg-3 balance-spacing my-4 text-pretty;
  }

  a {
    @apply data-underline:transition-colors data-underline:duration-200 data-underline:underline-offset-3 data-underline:underline data-underline:decoration-brand/50 data-underline:hover:decoration-brand/70 ease-[ease];
  }

  blockquote {
    padding-inline-start: 1em;
    border-inline-start-width: 0.25rem;
    @apply text-fg-3 balance-spacing my-4;
  }

  figure {
    @apply py-2 balance-spacing bg-bg-2 text-sm font-mono rounded-2xl leading-6;
  }
  figure code {
    counter-reset: line;
  }
  figure code [data-line] {
    @apply px-4;
  }
  figure code [data-line]:before {
    content: counter(line);
    counter-increment: line;
    @apply w-4 mr-4 text-right inline-block text-fg-3;
  }
}

@utility balance-spacing {
  @apply first:mt-0 last:mb-0;
}

